# logos-storage-ui

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  SETUP.md  StoragePreview.qmlproject  StorageUIComponent.cpp  StorageUIComponent.h  flake.nix  metadata.json  resources.qrc
.github/workflows/: doctests.yml
app/: .clang-format  AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  DebugDialog.cpp  DebugDialog.h  main.cpp  mainwindow.cpp  mainwindow.h
cli/: CMakeLists.txt  logos.cpp  logos.h  logos_manager.cpp  logos_manager.h  main.cpp  metadata.json
docs/: development.md  preview.sh  ui-guide.md
doctests/: storage-ui-migration.test.yaml
interfaces/: IComponent.h
nix/: app.nix  cli.nix  default.nix  lib.nix
plugin/: StorageUIPlugin.cpp  StorageUIPlugin.h  StorageView.qml  storage_resources.qrc
plugin/qml/: StorageView.qml
plugin/src/: StorageBackend.cpp  StorageBackend.h
qml/: CMakeLists.txt  main.cpp
src/: DebugWidget.cpp  DebugWidget.h  StorageBackend.cpp  StorageBackend.h  StorageBackend.rep  StorageInterface.h  StorageUIPlugin.cpp  StorageUIPlugin.h  StorageWidget.cpp  StorageWidget.h  StorageWindow.cpp  StorageWindow.h  main.cpp  resources.qrc  storage_resources.qrc  storage_ui_resources.qrc
src/qml/: AdvancedIcon.qml  AdvancedSetup.qml  ArcWidget.qml  BottomTitle.qml  CMakeLists.txt  Card.qml  DebugPanel.qml  DeleteIcon.qml  DiskActivityGraph.qml  DiskWidget.qml  DotIcon.qml  DownloadFolder.qml  DownloadIcon.qml  DownloadWidget.qml  ErrorToast.qml  GuideIcon.qml  HealthIndicator.qml  JsonEditor.qml  LogosStorageButton.qml  LogosStorageLayout.qml  LogosStorageSwitch.qml  LogosTextField.qml  Main.qml  ManifestTable.qml  ManifestWidget.qml  MockBackend.qml  ModeSelector.qml  Nat.qml  NodeHeader.qml  NodeStatusIcon.qml  NodeWidget.qml  OnBoarding.qml  OnBoardingCard.qml  OnBoardingContainer.qml  OnBoardingHeader.qml  OnBoardingLayout.qml  OnBoardingProgress.qml  PeersWidget.qml  PlayIcon.qml  PortForwarding.qml  (+17 more)
src/qml/icons/: AdvancedIcon.qml  ArcGauge.qml  ArcWidget.qml  DeleteIcon.qml  DotIcon.qml  DownloadIcon.qml  GuideIcon.qml  NodeStatusIcon.qml  PlayIcon.qml  PortIcon.qml  SettingsIcon.qml  StopIcon.qml  StorageIcon.qml  UploadIcon.qml  UpnpIcon.qml
