cmake_minimum_required(VERSION 3.16)
project(StorageUIPlugin VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(LOGOS_STORAGE_UI_USE_VENDOR OFF)

########### DEPENDENCIES SECTION ###########

# This section locates the required dependencies in 3 different ways:
# 1- With NIX, the root folders (LOGOS_LIBLOGOS_ROOT, LOGOS_CPP_SDK_ROOT,
#    and LOGOS_STORAGE_ROOT) are defined and point to the correct locations in
#    the Nix store.
# 2- If the root folders are fetched from source (basically using git) in the
#    parent folder, this is detected and used.
# 3- If none of the above apply, the vendor folders inside this project are used,
#    meaning the dependencies need to be fetched using git submodules.

if(NOT DEFINED LOGOS_LIBLOGOS_ROOT AND DEFINED ENV{LOGOS_LIBLOGOS_ROOT})
    set(LOGOS_LIBLOGOS_ROOT "$ENV{LOGOS_LIBLOGOS_ROOT}")
endif()

if(NOT DEFINED LOGOS_CPP_SDK_ROOT AND DEFINED ENV{LOGOS_CPP_SDK_ROOT})
    set(LOGOS_CPP_SDK_ROOT "$ENV{LOGOS_CPP_SDK_ROOT}")
endif()

if(NOT DEFINED LOGOS_STORAGE_ROOT AND DEFINED ENV{LOGOS_STORAGE_ROOT})
    set(LOGOS_STORAGE_ROOT "$ENV{LOGOS_STORAGE_ROOT}")
endif()

if(NOT DEFINED LOGOS_DESIGN_SYSTEM_ROOT AND DEFINED ENV{LOGOS_DESIGN_SYSTEM_ROOT})
    set(LOGOS_DESIGN_SYSTEM_ROOT "$ENV{LOGOS_DESIGN_SYSTEM_ROOT}")
endif()

if(NOT EXISTS "${LOGOS_LIBLOGOS_ROOT}/include/core/interface.h")
    message(FATAL_ERROR "logos-liblogos not found at ${LOGOS_LIBLOGOS_ROOT}. "
                        "Set LOGOS_LIBLOGOS_ROOT.")
endif()

if(NOT EXISTS "${LOGOS_CPP_SDK_ROOT}/include/cpp/logos_api.h")
    message(FATAL_ERROR "logos-cpp-sdk not found at ${LOGOS_CPP_SDK_ROOT}. "
                        "Set LOGOS_CPP_SDK_ROOT.")
endif()

if(NOT EXISTS "${LOGOS_STORAGE_ROOT}/include/storage_module_api.h")
    message(FATAL_ERROR "logos-storage-module not found at ${LOGOS_STORAGE_ROOT}. "
                        "Set LOGOS_STORAGE_ROOT.")
endif()

########### DEPENDENCIES END ###########

########### QT SECTION ###########

# Discover the required dependencies.
# Without this discovery part, the dependencies cannot be found.
# COMPONENTS is kind of generic for Qt modules.
find_package(Qt6 REQUIRED COMPONENTS Core Widgets RemoteObjects Quick QuickWidgets Network)

# Get the real path to handle symlinks correctly
#get_filename_component(REAL_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}" REALPATH)

# Try to find the component-interfaces package first
find_package(component-interfaces QUIET)

# If not found, use the local interfaces folder
if(NOT component-interfaces_FOUND)
    # Include the local interfaces directory
    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/interfaces)
    
    # Create a component-interfaces library
    add_library(component-interfaces INTERFACE)
    target_include_directories(component-interfaces INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/interfaces)
endif()

########### QT SECTION END ###########

########### SOURCES ###########

# Source files
set(SOURCES
    src/StorageUIPlugin.cpp
    src/StorageUIPlugin.h
    src/StorageBackend.cpp
    src/StorageBackend.h
    src/storage_resources.qrc
)

########### SOURCES END ###########

########### CPP GENERATOR ###########

# Define metadata json path
set(METADATA_JSON "${CMAKE_CURRENT_SOURCE_DIR}/metadata.json")

# Define the output directory for generated code
set(PLUGINS_OUTPUT_DIR "${CMAKE_SOURCE_DIR}/generated_code")

# logos_sdk.cpp is generated by logos-cpp-generator.
# In Nix builds this happens in the preConfigure phase (lib.nix).
# Outside Nix (e.g. Qt Creator via nix develop), run it now at configure time.
if(NOT EXISTS "${PLUGINS_OUTPUT_DIR}/logos_sdk.cpp")
    find_program(LOGOS_CPP_GENERATOR logos-cpp-generator REQUIRED)
    file(MAKE_DIRECTORY "${PLUGINS_OUTPUT_DIR}")
    execute_process(
        COMMAND env -u LD_LIBRARY_PATH "${LOGOS_CPP_GENERATOR}" --metadata "${METADATA_JSON}" --general-only --output-dir "${PLUGINS_OUTPUT_DIR}"
        RESULT_VARIABLE _gen_result
    )
    if(NOT _gen_result EQUAL 0)
        message(FATAL_ERROR "logos-cpp-generator failed (exit code ${_gen_result})")
    endif()
endif()

list(APPEND SOURCES ${PLUGINS_OUTPUT_DIR}/logos_sdk.cpp)

########### CPP GENERATOR END ###########

########### LIBRARY DEFINITION ###########

# Create the plugin library.
# This lib is the lib to be shared in order to
# be integrated in a standalone application.
add_library(storage_ui SHARED ${SOURCES})

# Set output name without lib prefix and with correct name for generator
set_target_properties(storage_ui PROPERTIES
    PREFIX ""
    OUTPUT_NAME "storage_ui"
)

# Set common properties for both platforms
set_target_properties(storage_ui PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/modules"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/modules"  # For Windows .dll
    BUILD_WITH_INSTALL_RPATH TRUE
    SKIP_BUILD_RPATH FALSE)

# Link SDK library
find_library(LOGOS_SDK_LIB logos_sdk PATHS ${LOGOS_CPP_SDK_ROOT}/lib NO_DEFAULT_PATH REQUIRED)
target_link_libraries(storage_ui PRIVATE ${LOGOS_SDK_LIB})

# Link against Abseil libraries if found
find_package(absl QUIET)
if(absl_FOUND)
    target_link_libraries(storage_ui PRIVATE
        absl::base
        absl::strings
        absl::log
        absl::check
    )
endif()

# Set up QML module directory for runtime
set(QML_THEME_DIR ${CMAKE_CURRENT_BINARY_DIR}/qml/Logos/Theme)
set(QML_CONTROLS_DIR ${CMAKE_CURRENT_BINARY_DIR}/qml/Logos/Controls)


# Files are in lib/Logos/Theme and lib/Logos/Controls
set(DESIGN_SYSTEM_THEME_SRC "${LOGOS_DESIGN_SYSTEM_ROOT}/lib/Logos/Theme")
set(DESIGN_SYSTEM_CONTROLS_SRC "${LOGOS_DESIGN_SYSTEM_ROOT}/lib/Logos/Controls")

# Copy QML module files to runtime directory
# Pure QML module - no library, just QML files + qmldir
add_custom_command(TARGET storage_ui POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E make_directory ${QML_THEME_DIR}
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${DESIGN_SYSTEM_THEME_SRC}/ ${QML_THEME_DIR}/
    COMMAND ${CMAKE_COMMAND} -E make_directory ${QML_CONTROLS_DIR}
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${DESIGN_SYSTEM_CONTROLS_SRC}/ ${QML_CONTROLS_DIR}/
    COMMENT "Setting up Logos.Theme and Logos.Controls QML modules for the app"
)

########### LIBRARY DEFINITION END ###########

########### HEADERS ###########

# Include directories
target_include_directories(storage_ui PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
    ${PLUGINS_OUTPUT_DIR}
)

# Add include directories based on layout type
target_include_directories(storage_ui PRIVATE ${LOGOS_LIBLOGOS_ROOT}/include)
target_include_directories(storage_ui PRIVATE ${LOGOS_STORAGE_ROOT}/include)

# Also include the include subdirectory
# (lib.nix moves header files to ./generated_code/include/)
target_include_directories(storage_ui PRIVATE
    ${LOGOS_CPP_SDK_ROOT}/include
    ${LOGOS_CPP_SDK_ROOT}/include/cpp
    ${LOGOS_CPP_SDK_ROOT}/include/core
    ${PLUGINS_OUTPUT_DIR}/include
)

########### HEADERS END ###########

########### LINKS ###########

# Link against libraries
target_link_libraries(storage_ui PRIVATE 
    Qt6::Core
    Qt6::Widgets
    Qt6::RemoteObjects
    Qt6::Quick
    Qt6::QuickWidgets
    Qt6::Network
    component-interfaces
)

########### RUNTIME LINK ###########

if(APPLE)
    # macOS specific settings
    set_target_properties(storage_ui PROPERTIES
        INSTALL_RPATH "@loader_path"
        INSTALL_NAME_DIR "@rpath"
        BUILD_WITH_INSTALL_NAME_DIR TRUE)
    
    add_custom_command(TARGET storage_ui POST_BUILD
        COMMAND install_name_tool -id "@rpath/storage_ui.dylib" $<TARGET_FILE:storage_ui>
        COMMENT "Updating library paths for macOS"
    )
else()
    # Linux specific settings
    set_target_properties(storage_ui PROPERTIES
        INSTALL_RPATH "$ORIGIN"
        INSTALL_RPATH_USE_LINK_PATH FALSE)
endif()

########### RUNTIME LINK END ###########

########### INSTALL ###########

install(TARGETS storage_ui
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/logos/modules
    RUNTIME DESTINATION ${CMAKE_INSTALL_LIBDIR}/logos/modules
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/logos/modules
)

install(FILES ${METADATA_JSON}
    DESTINATION ${CMAKE_INSTALL_DATADIR}/logos-storage-ui
)

install(DIRECTORY "${PLUGINS_OUTPUT_DIR}/"
    DESTINATION ${CMAKE_INSTALL_DATADIR}/logos-storage-ui/generated
    OPTIONAL
)

########### INSTALL END ###########

# Print status messages
message(STATUS "Storage UI Plugin configured successfully") 
